Fix screenshot visibility bug

--- a/src/components/Projects/index.css
+++ b/src/components/Projects/index.css
@@ -178,7 +178,6 @@ main.projects {
           >img {
             max-height: calc(var(--screenshot-height) - 2px);
             max-width: 100%;
-            z-index: -1;
           }
         }
       }
